# ros2_ws

./: frames_2025-12-03_21.04.49.gv
install/rm65_control/share/rm65_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ros2_controllers.yaml
install/rm65_control/share/rm65_control/cmake/: rm65_controlConfig-version.cmake  rm65_controlConfig.cmake
install/rm65_control/share/rm65_control/environment/: ament_prefix_path.dsv  path.dsv
install/rm65_control/share/rm65_control/launch/: rm65_controllers.launch.py
install/rm65_description/share/rm65_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rm65_description/share/rm65_description/cmake/: rm65_descriptionConfig-version.cmake  rm65_descriptionConfig.cmake
install/rm65_description/share/rm65_description/config/: joint_names_rm_65_6f_description.yaml
install/rm65_description/share/rm65_description/environment/: ament_prefix_path.dsv  path.dsv
install/rm65_description/share/rm65_description/launch/: display.launch  display.launch.py  gazebo.launch
install/rm65_description/share/rm65_description/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
install/rm65_description/share/rm65_description/urdf/: rm_65_6f_description.csv  rm_65_6f_description.urdf
install/rm65_moveit_config/share/rm65_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rm65_moveit_config/share/rm65_moveit_config/cmake/: rm65_moveit_configConfig-version.cmake  rm65_moveit_configConfig.cmake
install/rm65_moveit_config/share/rm65_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  rm65.ros2_control.xacro  rm65.srdf  rm65.urdf.xacro  ros2_controllers.yaml
install/rm65_moveit_config/share/rm65_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/rm65_moveit_config/share/rm65_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/rm65_planner/include/rm65_planner/: apf_rrt_planner.hpp
install/rm65_planner/lib/rm65_planner/: rm65_plan_path_server
install/rm65_planner/share/rm65_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rm65_planner/share/rm65_planner/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  rm65_plannerConfig-version.cmake  rm65_plannerConfig.cmake
log/: latest_build
src/rm65_control/: CMakeLists.txt  package.xml  ros2_controllers.yaml
src/rm65_control/launch/: rm65_controllers.launch.py
src/rm65_description/: CMakeLists.txt
src/rm65_description/launch/: display.launch.py
src/rm65_description/urdf/: rm_65_6f_description.urdf
src/rm65_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/rm65_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  rm65.ros2_control.xacro  rm65.srdf  rm65.urdf.xacro
src/rm65_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/rm65_planner/: CMakeLists.txt  package.xml
src/rm65_planner/include/rm65_planner/: apf_rrt_planner.hpp
src/rm65_planner/launch/: plan_path_server.launch.py
src/rm65_planner/src/: apf_rrt_planner.cpp  plan_path_server.cpp
(+12 files in other folders)
