<?xml version="1.0"?>
<package format="3">
  <name>rm65_control</name>
  <version>0.0.0</version>
  <description>Controllers configuration for RM65 manipulator.</description>

  <maintainer email="user@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rm65_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
