<?xml version="1.0"?>
<package format="3">
  <name>rm65_planner</name>
  <version>0.0.0</version>
  <description>APF-RRT planner and services for RM65.</description>
  <maintainer email="user@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>full_interfaces</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>Eigen3</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>full_interfaces</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
